# TelegramEmojiProducer

./: .gitignore  GEMINI.md  README.md  STATUS.md  check_transparency.html  docker-compose.yml  pyproject.toml
app/: Dockerfile  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
app/e2e/: admin.spec.ts  home.spec.ts
app/playwright-report/: index.html
app/src/app/: page.tsx
app/src/app/admin/: page.tsx
app/src/lib/: api.ts
app/test-results/: .last-run.json
app/test-results/admin-Admin-Page-should-allow-marking-a-request-as-complete-firefox/: error-context.md
app/test-results/admin-Admin-Page-should-allow-marking-a-request-as-complete-webkit/: error-context.md
app/test-results/home-Home-Page-should-allo-7f1d5-d-display-converted-sticker-chromium/: error-context.md
backend/: Dockerfile  db.json  main.py  pyproject.toml  requirements.txt
backend/src/telegramemojis/: database.py  main.py
backend/src/telegramemojis/tests/: extract_first_frame.py  generate_sine_gif.py  generate_transparent_png.py  test_gif_to_webm_transparency.py  test_pil_scaling.py
scripts/: deploy.sh  generate_secrets.sh  generate_secrets_production.sh  setup.sh
scripts/lib/: config.sh
scripts/setup/: 01_setup_system.sh  02_setup_python_uv.sh  04_setup_nvm.sh  07_setup_user.sh  08_setup_caddy.sh
src/telegramemojis/: custom_encoder.py  main.py  old.py  webm_alpha_muxer.py
tests/: debug_gif_alpha.py  test_sticker_conversion.py  test_transparency.py
